sofia-rs/tui/src/bottom_pane/snapshots/sofia_tui__bottom_pane__chat_composer__tests__vim_fresh_draft.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                        "
"› Ask Sofia to do anything              "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"       100% context left | Vim: Insert  "
